--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&family=Montserrat:wght@200;300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400;1,500&family=Tenor+Sans&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap" rel="stylesheet">
     <style>
       body {
         background-color: #080C10;
         color: #FDFCF0;
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Tenor Sans', sans-serif;
         scroll-behavior: smooth;
         -webkit-font-smoothing: antialiased;
       }
       .font-serif {
+        font-family: 'Playfair Display', serif;
+      }
+      .font-tenor {
+        font-family: 'Tenor Sans', sans-serif;
+      }
+      .font-garamond {
         font-family: 'Cormorant Garamond', serif;
       }
       .text-gold {
@@ -30,13 +36,16 @@
         color: #080C10;
       }
       ::-webkit-scrollbar {
-        width: 4px;
+        width: 3px;
       }
       ::-webkit-scrollbar-track {
         background: #080C10;
       }
       ::-webkit-scrollbar-thumb {
         background: #C5A27D;
+      }
+      .no-scrollbar::-webkit-scrollbar {
+        display: none;
       }
     </style>
   <script type="importmap">
